feat: change connect to sql

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
 # Port number
 PORT=3000
 
-# URL of the Mongo DB
-MONGODB_URL=mongodb://127.0.0.1:27017/node-boilerplate
+# Database type | options: pg, mysql, better-sqlite3, sqlite3, mssql, postgres
+DATABASE_TYPE=mysql
+# Database host
+DATABASE_HOST=localhost
+# Database port
+DATABASE_PORT=3306
+# Database username
+DATABASE_USERNAME=root
+# Database password
+DATABASE_PASSWORD=root
+# Database name
+DATABASE_NAME=node-boilerplate
+# Database synchronize
+DATABASE_CHARSET=utf8
 
 # JWT
 # JWT secret key
