--- a/package.json
+++ b/package.json
@@ -60,10 +60,14 @@
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^3.0.1",
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
     "nodemailer": "^6.3.1",
+    "objection": "^3.1.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
