--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Create a Node.js app for building production-ready RESTful APIs using Express, by running one command",
   "main": "src/index.js",
-  "repository": "https://github.com/hagopj13/node-express-boilerplate.git",
-  "author": "Hagop Jamkojian <hagopj13@gmail.com>",
+  "author": "Cuong Nguyen <nqcuong.dev@gmail.com>",
   "license": "MIT",
   "engines": {
     "node": ">=12.0.0"
@@ -23,7 +22,12 @@
     "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
     "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
     "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "make:migrate": "cross-env NODE_ENV=development knex --knexfile=src/databases/knexfile.js migrate:make",
+    "run:migrate": "cross-env NODE_ENV=development knex --knexfile=src/databases/knexfile.js migrate:up",
+    "rollback:migrate": "cross-env NODE_ENV=development knex --knexfile=src/databases/knexfile.js migrate:rollback",
+    "make:seed": "cross-env NODE_ENV=development knex --knexfile=src/databases/knexfile.js seed:make",
+    "run:seed": "cross-env NODE_ENV=development knex --knexfile=src/databases/knexfile.js seed:run"
   },
   "keywords": [
     "node",
@@ -51,7 +55,6 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
@@ -65,7 +68,6 @@
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.5",
     "nodemailer": "^6.3.1",
     "objection": "^3.1.3",
     "passport": "^0.4.0",
