feat: add entity model

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,6 @@ SMTP_PORT=587
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=support@yourapp.com
+
+# Public URL of the app (required for sending emails &amp; password reset links)
+PUBLIC_APP_URL=http://localhost
