feat: updatde the unit test

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ DATABASE_HOST=localhost
 DATABASE_PORT=3306
 # Database username
 DATABASE_USERNAME=root
+# Database for unit tests
+DATABASE_TEST_NAME=node-boilerplate-test
 # Database password
 DATABASE_PASSWORD=root
 # Database name
